--- a/bs4bartik.breakpoints.yml
+++ b/bs4bartik.breakpoints.yml
@@ -1,16 +1,16 @@
-bartik.mobile:
+bs4bartik.mobile:
   label: mobile
   mediaQuery: ''
   weight: 0
   multipliers:
     - 1x
-bartik.narrow:
+bs4bartik.narrow:
   label: narrow
   mediaQuery: 'all and (min-width: 560px) and (max-width: 850px)'
   weight: 1
   multipliers:
     - 1x
-bartik.wide:
+bs4bartik.wide:
   label: wide
   mediaQuery: 'all and (min-width: 851px)'
   weight: 2
